<resources>
    <string name="app_name">StyleAlive</string>
    <string name="title">GLaDOS</string>
    <string name="description">GLaDOS (Genetic Lifeform and Disk Operating System, Forme de Vie Génétique et Système d’Exploitation de Disque) est un personnage fictif qui apparaît dans les jeux vidéo Portal et Portal 2. Elle a été créée par Erik Wolpaw et Kim Swift, et Ellen McLain lui prête sa voix.</string>
    <string name="subtitle1">Dans Portal</string>
    <string name="text1">Le joueur est guidé dès le début du jeu par la voix de GLaDOS, qui semble préenregistrée. Au fur et à mesure que les épreuves deviennent de plus en plus dangereuses, il devient évident que c\'est une intelligence artificielle qui s\'adresse à Chell, le personnage du joueur.
Au fil du jeu, GLaDOS est impressionnée par les progrès de Chell. Elle a une vision naïve de l\'esprit humain et du conditionnement, et promet d\'offrir un gâteau à l\'issue des salles de test, issue qui se révèle être un trajet vers l\'incinérateur. Chell parvient à s\'échapper par les zones de maintenance. La personnalité de GLaDOS va alors progressivement devenir meurtrière, délaissant les promesses de gâteau pour les menaces de mort. Elle devient aussi de plus en plus paniquée et incohérente, à mesure que Chell se rapproche.
À la fin du parcours, Chell parvient à GLaDOS, qui s\'avère être une énorme machine suspendue au plafond dans une vaste salle. Lors de leur confrontation, GLaDOS admet qu\'elle a exterminé tout le personnel humain d\'Aperture avec des neurotoxines et qu\'elle est seule depuis longtemps. Sa personnalité, étant contenue dans un certain nombre de sphères robotiques, se désagrège au fur et à mesure que Chell incinère ces sphères. Le jeu se termine par sa destruction apparente dans une explosion considérable.
Durant les crédits, GLaDOS chante la chanson Still Alive, qui signifie littéralement « Toujours en vie »1.</string>
    <string name="subtitle2">Dans Portal 2</string>
    <string name="text2">Au début de Portal 2, Chell est sortie de son état de stase par Wheatley, un robot du centre. Il la mène jusqu\'à l\'ancienne salle de GLaDOS, et tous deux la réactivent par accident. Animée par la vengeance, GLaDOS enferme de nouveau Chell dans les salles de test et se remet à conduire des tests tout en l\'insultant. Finalement, Chell parvient à regagner les zones de maintenance avec Wheatley.
Après avoir saboté les armes de GLaDOS, Chell et Wheatley parviennent à opérer un transfert de personnalité, et à mettre Wheatley aux commandes. Wheatley devient immédiatement fou furieux et expédie GLaDOS - réduite à l\'état de sphère connectée à une pomme de terre pour le courant - et Chell dans les tréfonds d\'Aperture. Elles traversent une partie abandonnée du complexe, datant de l\'époque où le fondateur d\'Aperture, Cave Johnson, était aux commandes. À la vue de portraits et en entendant des messages vocaux de Cave, GLaDOS prend conscience que sa personnalité a été basée sur celle d\'une femme, Caroline, l\'assistante de Cave Johnson.
Elles remontent toutes deux vers la partie supérieure du complexe, et passent à travers des salles de test créées par GLaDOS et réutilisées par Wheatley. GLaDOS tente de faire surchauffer Wheatley grâce à un paradoxe, mais cela échoue, du fait de la nature simple du robot. Finalement, Wheatley décide de tuer Chell et GLaDOS avec des broyeurs. Elles s\'échappent, et rejoignent la salle où se trouve son corps, c\'est-à-dire celui de GLaDOS. Après un court combat, Chell parvient à replacer GLaDOS dans son corps d\'origine, envoie Wheatley dans l\'espace et s\'évanouit.
GLaDOS prend conscience que la personnalité de Caroline est toujours en elle, et lui donne une part d\'humanité. Elle l\'efface aussitôt mais décide de libérer Chell car la tuer est décidément trop compliqué. Chell quitte donc Aperture, laissant GLaDOS toujours aux commandes.
Dans les crédits, GLaDOS chante la chanson Want you gone.</string>
    <string name="text3">Conclusion</string>
    <string name="c_est_cool">C\'est cool</string>
</resources>
