<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.wcs.stylealive.MainActivity"
    style="@style/Main">

    <LinearLayout
        style="@style/LinearLayout">

        <ImageView
           style="@style/ImageView" />

        <TextView
            style="@style/Title"
            android:text="@string/title"
            />



        <TextView
            style="@style/Description"
            android:text="@string/description"
             />

        <TextView
            style="@style/Subtitle"
            android:text="@string/subtitle1"
             />

        <TextView
            style="@style/Text"
            android:text="@string/text1"
            />

        <TextView
            style="@style/Subtitle"
            android:text="@string/subtitle2"
             />

        <TextView
            style="@style/Text"
            android:text="@string/text2"
             />

        <TextView
            style="@style/Subtitle"
            android:text="@string/text3"
            />

        <TextView
            style="@style/text"
            android:text="@string/c_est_cool"
            />

    </LinearLayout>
</ScrollView>
